# Lightweight-Windows-EDR-System

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMMIT_MESSAGE.md  LICENSE  QUICKSTART.md  README.md  Windows EDR System Prototype — Master Build Prompt.md  build.bat  error_logs.txt  main.cpp  main_gui.cpp
collectors/: FileMonitor.cpp  FileMonitor.hpp  NetworkMonitor.cpp  NetworkMonitor.hpp  ProcessMonitor.cpp  ProcessMonitor.hpp  RegistryMonitor.cpp  RegistryMonitor.hpp
compliance/: AuditLogger.cpp  AuditLogger.hpp  ComplianceReporter.cpp  ComplianceReporter.hpp  ForensicsExporter.cpp  ForensicsExporter.hpp  MitreMapper.cpp  MitreMapper.hpp
config/: config.yaml  rules.yaml
core/: EventBus.cpp  EventBus.hpp  Logger.cpp  Logger.hpp  ThreadPool.cpp  ThreadPool.hpp  WindowsHeaders.hpp
engine/: BehaviorCorrelator.cpp  BehaviorCorrelator.hpp  RiskScorer.cpp  RiskScorer.hpp  RuleEngine.cpp  RuleEngine.hpp
ipc/: PipeClient.cpp  PipeClient.hpp  SharedMemoryClient.cpp  SharedMemoryClient.hpp  SharedMemoryServer.cpp  SharedMemoryServer.hpp
persistence/: DatabaseManager.cpp  DatabaseManager.hpp
response/: ContainmentManager.cpp  ContainmentManager.hpp  IncidentManager.cpp  IncidentManager.hpp
tests/: test_compliance.cpp  test_database.cpp  test_e2e_bridge.cpp  test_eventbus.cpp  test_incidentmanager.cpp  test_ipc_pipe.cpp  test_ipc_sharedmem.cpp  test_riskscorer.cpp  test_threadpool.cpp
ui/: AboutPanel.cpp  AboutPanel.hpp  DashboardPanel.cpp  DashboardPanel.hpp  EDRBridge.cpp  EDRBridge.hpp  FullScanPanel.cpp  FullScanPanel.hpp  IPCWorker.cpp  IPCWorker.hpp  LogsPanel.cpp  LogsPanel.hpp  MainWindow.cpp  MainWindow.hpp  QuarantinePanel.cpp  QuarantinePanel.hpp  QuickScanPanel.cpp  QuickScanPanel.hpp  RealTimeProtectionPanel.cpp  RealTimeProtectionPanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp
